# steakdechameau

./: .gitignore  README.md  dune-project  steakdechameau.cih  steakdechameau.opam
data/config/: background.ini  bandit.ini  baril.ini  chamo.ini  end.ini  player.ini  score.ini  sound.ini  steakdechameau.ini  table.ini
data/sound/: ambiance.m4a  chameau.m4a
src/: dune  steakdechameau.ml
